--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,20 @@
 body {
   font-family: 'Lato', sans-serif;
   font-family: 'Poppins', sans-serif;
-  /* background-color: #fae0cf47; */
+  /* background-color: #f4f4f4; */
 }
 
 .section-center {
   width: 90%;
   max-width: 1250px;
   margin: 0 auto;
+}
+
+.title {
+  font-size: 62px;
+  margin-bottom: 3rem;
+  display: inline-block;
+  text-align: center;
+  color: #333;
+  border-bottom: 5px solid var(--clr-orange-title);
 }
