--- a/src/index.css
+++ b/src/index.css
@@ -13,19 +13,10 @@ body {
   font-family: 'Lato', sans-serif;
   font-family: 'Poppins', sans-serif;
   overflow: none;
-  /* background-image: radial-gradient(
-    circle 343px at 46.3% 47.5%,
-    rgba(242, 242, 242, 1) 0%,
-    rgba(241, 241, 241, 1) 72.9%
-  ); */
-  /* background-image: radial-gradient(
-    circle 993px at 0.5% 50.5%,
-    rgba(137, 171, 245, 0.37) 0%,
-    rgba(245, 247, 252, 1) 100.2%
-  ); */
 }
 
 .section-center {
+  /* padding: 0rem 3rem; */
   width: 90%;
   max-width: 1250px;
   margin: 0 auto;
@@ -38,4 +29,15 @@ body {
   text-align: center;
   color: #333;
   border-bottom: 5px solid var(--clr-orange-title);
+}
+
+.custom-list {
+  margin-bottom: 2rem;
+}
+
+.lds-ring {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
