--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,12 @@ body {
   font-family: 'Lato', sans-serif;
   font-family: 'Poppins', sans-serif;
   overflow: none;
+  background-image: url('./assets/so-white.png');
+  /* background-image: url('./assets/floor-tile.png'); */
+
+  /* background-size: cover; */
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
 }
 
 .section-center {
